@@ -66,6 +66,11 @@ class TagsModelTags extends JModelList
 		{
 			$this->setState('filter.published', 1);
 		}
+
+		// Optional filter text
+		$itemid = $pid . ':' . $app->input->getInt('Itemid', 0);
+		$filterSearch = $app->getUserStateFromRequest('com_tags.tags.list.' . $itemid . '.filter_search', 'filter-search', '', 'string');
+		$this->setState('list.filter', $filterSearch);
 	}
 
 	/**
@@ -103,6 +108,7 @@ class TagsModelTags extends JModelList
 	 */
 	protected function getListQuery()
 	{
+		$app = JFactory::getApplication('site');
 		$user	= JFactory::getUser();
 		$groups	= implode(',', $user->getAuthorisedViewLevels());
 		$pid = $this->getState('tag.parent_id');
@@ -142,7 +148,35 @@ class TagsModelTags extends JModelList
 			$query->where($db->quoteName('language') . ' IN (' . $db->quote($language) . ', ' . $db->quote('*') . ')');
 		}
 
-		$query->order($db->quoteName($orderby) . ' ' . $orderDirection);
+		// List state information
+		$format = $app->input->getWord('format');
+		if ($format == 'feed')
+		{
+			$limit = $app->getCfg('feed_limit');
+		}
+		else
+		{
+			if ($this->state->params->get('show_pagination_limit'))
+			{
+				$limit = $app->getUserStateFromRequest('global.list.limit', 'limit', $app->getCfg('list_limit'), 'uint');
+			}
+			else
+			{
+				$limit = $this->state->params->get('maximum', 20);
+			}
+		}
+		$this->setState('list.limit', $limit);
+
+		$offset = $app->input->get('limitstart', 0, 'uint');
+		$this->setState('list.start', $offset);
+
+		// Optionally filter on entered value
+		if ($this->state->get('list.filter'))
+		{
+			$query->where($this->_db->quoteName('a.title') . ' LIKE ' . $this->_db->quote('%' . $this->state->get('list.filter') . '%'));
+		}
+
+		$query->order($db->quoteName($orderby) . ' ' . $orderDirection . ', a.title ASC');
 
 		return $query;
 	}
