@@ -37,6 +37,34 @@ $bscolumns = min($columns, floor(12 / $bsspans));
 $n = count($this->items);
 ?>
 
+<form action="<?php echo htmlspecialchars(JUri::getInstance()->toString()); ?>" method="post" name="adminForm" id="adminForm">
+	<?php if ($this->params->get('filter_field') != 'hide' || $this->params->get('show_pagination_limit')) : ?>
+	<fieldset class="filters btn-toolbar">
+		<?php if ($this->params->get('filter_field') !== '0') : ?>
+			<div class="btn-group">
+				<label class="filter-search-lbl element-invisible" for="filter-search">
+					<?php echo JText::_('COM_TAGS_TITLE_FILTER_LABEL') . '&#160;'; ?>
+				</label>
+				<input type="text" name="filter-search" id="filter-search" value="<?php echo $this->escape($this->state->get('list.filter')); ?>" class="inputbox" onchange="document.adminForm.submit();" title="<?php echo JText::_('COM_TAGS_FILTER_SEARCH_DESC'); ?>" placeholder="<?php echo JText::_('COM_TAGS_TITLE_FILTER_LABEL'); ?>" />
+			</div>
+		<?php endif; ?>
+		<?php if ($this->params->get('show_pagination_limit')) : ?>
+			<div class="btn-group pull-right">
+				<label for="limit" class="element-invisible">
+					<?php echo JText::_('JGLOBAL_DISPLAY_NUM'); ?>
+				</label>
+				<?php echo $this->pagination->getLimitBox(); ?>
+			</div>
+		<?php endif; ?>
+
+		<input type="hidden" name="filter_order" value="" />
+		<input type="hidden" name="filter_order_Dir" value="" />
+		<input type="hidden" name="limitstart" value="" />
+		<input type="hidden" name="task" value="" />
+		<div class="clearfix"></div>
+	</fieldset>
+	<?php endif; ?>
+
 <?php if ($this->items == false || $n == 0) : ?>
 	<p><?php echo JText::_('COM_TAGS_NO_TAGS'); ?></p>
 <?php else : ?>
@@ -87,3 +115,20 @@ $n = count($this->items);
 
 	<?php endforeach; ?>
 <?php endif;?>
+
+<?php // Add pagination links ?>
+<?php if (!empty($this->items)) : ?>
+	<?php if (($this->params->def('show_pagination', 2) == 1  || ($this->params->get('show_pagination') == 2)) && ($this->pagination->pagesTotal > 1)) : ?>
+	<div class="pagination">
+
+		<?php if ($this->params->def('show_pagination_results', 1)) : ?>
+			<p class="counter pull-right">
+				<?php echo $this->pagination->getPagesCounter(); ?>
+			</p>
+		<?php endif; ?>
+
+		<?php echo $this->pagination->getPagesLinks(); ?>
+	</div>
+	<?php endif; ?>
+</form>
+<?php endif; ?>
