@@ -28,6 +28,7 @@ $ -> Language fix or change
 08-Apr-2013 Michael Babker
  # [#29916] MySQL connections are not closed.  Thanks Ian Goldstein
  # [#30508] Fixed typo $text = $text = '..';.  Thanks Piotr Konieczny
+ # [#30504] List All Tags doesn't have pagination.  Thanks Mark Dexter
 
 08-Apr-2013 Jean-Marie Simonet
  $ Adding installation language pt-PT
